--- a/index.html
+++ b/index.html
@@ -256,7 +256,9 @@ Working in the public sector gave me the opportunity to face a variety of unique
     
 
     <footer>
-        ©2024 Jonatan Fuentes Cerezo
+
+        <a href="https://jonatanfuentes.github.io/tarot/"> ©2024 Jonatan Fuentes Cerezo</a>
+       
     </footer>
     <script type="module" src="./main.js"></script>
     <script type="module" src="./main2.js"></script>
