--- a/index.html
+++ b/index.html
@@ -257,13 +257,19 @@ Working in the public sector gave me the opportunity to face a variety of unique
 
     <footer>
 
-        <a href="https://jonatanfuentes.github.io/tarot/"> ©2024 Jonatan Fuentes Cerezo</a>
+        ©2024 Jonatan Fuentes Cerezo
        
     </footer>
+
+    
+
     <script type="module" src="./main.js"></script>
     <script type="module" src="./main2.js"></script>
  
     <script type="module" src="./main4.js"></script>
     <script type="module" src="./main3.js"></script>
+    <script>    document.getElementById('footer').addEventListener('click', function() {
+    window.location.href = 'https://jonatanfuentes.github.io/tarot/'; // 
+}); </script>
 </body>
 </html>
