--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ Working in the public sector gave me the opportunity to face a variety of unique
     <br>
     
 
-    <footer>
+    <footer id="footer">
 
         ©2024 Jonatan Fuentes Cerezo
        
