--- a/about.html
+++ b/about.html
@@ -161,8 +161,13 @@ footer {
         </table>
     </div>
 
-    <footer>
+    <footer id="footer">
+
         ©2024 Jonatan Fuentes Cerezo
+       
     </footer>
+<script>    document.getElementById('footer').addEventListener('click', function() {
+    window.location.href = 'https://jonatanfuentes.github.io/tarot/'; // 
+}); </script>
 </body>
 </html>
