--- a/cont.html
+++ b/cont.html
@@ -206,8 +206,13 @@
 
         <button type="submit">Submit</button>
     </form>
-    <footer>
+  <footer id="footer">
+
         ©2024 Jonatan Fuentes Cerezo
+       
     </footer>
+<script>    document.getElementById('footer').addEventListener('click', function() {
+    window.location.href = 'https://jonatanfuentes.github.io/tarot/'; // 
+}); </script>
 </body>
 </html>
