--- a/project.html
+++ b/project.html
@@ -113,8 +113,13 @@
         <a href="https://github.com/JonatanFuentes/music-bot-discord">Discord music bot - Python</a><br> <br>
     </div>
 
-    <footer>
+  <footer id="footer">
+
         ©2024 Jonatan Fuentes Cerezo
+       
     </footer>
+<script>    document.getElementById('footer').addEventListener('click', function() {
+    window.location.href = 'https://jonatanfuentes.github.io/tarot/'; // 
+}); </script>
 </body>
 </html>
