--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ One of the most rewarding aspects of working with PHP is its versatility and wid
 This experience allowed me to appreciate the capabilities of Python for developing robust and efficient web solutions, especially in a demanding environment like mining.
 <br><br>
 Python has become an invaluable tool in the mining industry due to its simplicity and versatility. In the projects I participated in, we used Python to develop web applications that 
-handled large volumes of geological and operational data. These applications not only facilitated data management and analysis, but also improved decision-making through intuitive and 
+handled large volumes of  operational data. These applications not only facilitated data management and analysis, but also improved decision-making through intuitive and 
 functional interfaces.
 
     </p>
