--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ body {
     </ul>
 
     <div class="centered-container">
-        <h1>Full Stack Developer</h1>
+        <h1>Full Stack Developer 1</h1>
         <h2>In my work experiences, I worked mainly as a fullstack developer using PHP, Node.JS, Wordpress and the use of frameworks.</h4>
         <h2>My main objective is to keep improving and learn new technologies to provide the best solutions.</h4>
     </div>
