--- a/project.html
+++ b/project.html
@@ -94,9 +94,9 @@
 <body>
     <ul class="navbar">
         <li><a href="index.html">Jonatan Fuentes Cerezo</a></li>
-        <li style="float:right"><a href="cont.html">Contact</a></li>
-        <li style="float:right"><a class="active" href="#here">Projects</a></li>
-        <li style="float:right"><a href="about.html">About</a></li>
+        <li style="float:right"><a href="cont.html">Contacto</a></li>
+        <li style="float:right"><a class="active" href="#here">Projectos</a></li>
+        <li style="float:right"><a href="about.html">Sobre mí</a></li>
         <li style="float:right"><a href="index.html">Home</a></li>
     </ul>
 
