--- a/about.html
+++ b/about.html
@@ -115,23 +115,24 @@ footer {
 <body>
     <ul class="navbar">
         <li><a href="index.html">Jonatan Fuentes Cerezo</a></li>
-        <li style="float:right"><a href="cont.html">Contact</a></li>
-        <li style="float:right"><a href="project.html">Projects</a></li>
-        <li style="float:right"><a class="active" href="#here">About</a></li>
+        <li style="float:right"><a href="cont.html">Contacto</a></li>
+        <li style="float:right"><a href="project.html">Projectos</a></li>
+        <li style="float:right"><a class="active" href="#here">Sobre mí</a></li>
         <li style="float:right"><a  href="index.html">Home</a></li>
     </ul>
 
     <div class="content">
-        <h1>About</h1>
-        <p>Chilean, born 2001; lives and works in Copiapó, Chile</p>
-        <p>Telecommunications Certificate 2020</p>
-        <p>Graduated in 2022, Programmer Analyst</p>
-        <p>Certificate Web Design in 2023 - 2024</p>
+        <h1>Sobre mí</h1>
+        <p>Chileno, nacido 2001; vivo y trabajo en Copiapó, Chile</p>
+        <p>Titulo de nivel medio en Telecomunicaciones 2020</p>
+        <p>Titulo de nivel superior en Analista Programador</p>
+        <p>Diplomado en diseño web 2023 - 2024</p>
 
 
-        <h1>Experience</h1>
-        <p>Dintec - Mining web application developer - 2023</p>
-        <p>Juzgado de Garantía de Copiapó - Manager of IT - 2024</p>
+        <h1>Experiencia</h1>
+        <p>Dintec - Desarrollador de aplicaciones web para la mineria - 2023</p>
+        <p>Juzgado de Garantía de Copiapó - Administrativo 2° Encargado de Informática - 2024 - Suplente</p>
+        <p>Juzgado de Garantía de Copiapó - Administrativo 2° Encargado de Informática - 2025 - Suplente</p>
 
         <h1>Full Stack Developer</h1>
         
@@ -147,7 +148,7 @@ footer {
                         <li>SQL</li>
                         <li>MongoDB</li>
                     </ul></td>
-                <td><p>Dev Tools</p>
+                <td><p>Herramintas de desarrollo</p>
                     <ul class="tools-list">
                         <li>Bootstrap</li>
                         <li>Oracle</li>
