--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@ body {
 <body>
     <ul class="navbar">
         <li><a href="#here">Jonatan Fuentes Cerezo</a></li>
-        <li style="float:right"><a href="cont.html">Contact</a></li>
-        <li style="float:right"><a href="project.html">Projects</a></li>
-        <li style="float:right"><a href="about.html">About</a></li>
+        <li style="float:right"><a href="cont.html">Contacto</a></li>
+        <li style="float:right"><a href="project.html">Projectos</a></li>
+        <li style="float:right"><a href="about.html">Sobre mí</a></li>
         <li style="float:right"><a class="active" href="#here">Home</a></li>
     </ul>
 
