--- a/cont.html
+++ b/cont.html
@@ -172,9 +172,9 @@
 <body>
     <ul class="navbar">
         <li><a href="index.html">Jonatan Fuentes Cerezo</a></li>
-        <li style="float:right"><a class="active" href="#here">Contact</a></li>
-        <li style="float:right"><a href="project.html">Projects</a></li>
-        <li style="float:right"><a  href="#here">About</a></li>
+        <li style="float:right"><a class="active" href="#here">Contacto</a></li>
+        <li style="float:right"><a href="project.html">Projectos</a></li>
+        <li style="float:right"><a  href="#here">Sobre mí</a></li>
         <li style="float:right"><a  href="index.html">Home</a></li>
     </ul>
 
