--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@ footer {
         <h1>Sobre mí</h1>
         <p>Chileno, nacido 2001; vivo y trabajo en Copiapó, Chile</p>
         <p>Titulo de nivel medio en Telecomunicaciones 2020</p>
-        <p>Titulo de nivel superior en Analista Programador</p>
+        <p>Titulo de nivel superior en Analista Programador 2022</p>
         <p>Diplomado en diseño web 2023 - 2024</p>
 
 
