--- a/cont.html
+++ b/cont.html
@@ -190,7 +190,7 @@
     </div>
     
     <br>
-    <h3>Send a general message or details of a project you'd like me to be a part of and I'll get back to you as soon as possible.</h3>
+    <h3>Enviame un mensaje para ponernos en contacto</h3>
     
     <br>
     <form action="https://formsubmit.co/fuentescerezojonatan@gmail.com" method="post" class="contact-form">
