--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@ footer {
     <ul class="navbar">
         <li><a href="index.html">Jonatan Fuentes Cerezo</a></li>
         <li style="float:right"><a href="cont.html">Contacto</a></li>
-        <li style="float:right"><a href="project.html">Projectos</a></li>
+        <li style="float:right"><a href="project.html">Proyectos</a></li>
         <li style="float:right"><a class="active" href="#here">Sobre mí</a></li>
         <li style="float:right"><a  href="index.html">Home</a></li>
     </ul>
