--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ body {
     <ul class="navbar">
         <li><a href="#here">Jonatan Fuentes Cerezo</a></li>
         <li style="float:right"><a href="cont.html">Contacto</a></li>
-        <li style="float:right"><a href="project.html">Projectos</a></li>
+        <li style="float:right"><a href="project.html">Proyectos</a></li>
         <li style="float:right"><a href="about.html">Sobre mí</a></li>
         <li style="float:right"><a class="active" href="#here">Home</a></li>
     </ul>
