--- a/project.html
+++ b/project.html
@@ -95,7 +95,7 @@
     <ul class="navbar">
         <li><a href="index.html">Jonatan Fuentes Cerezo</a></li>
         <li style="float:right"><a href="cont.html">Contacto</a></li>
-        <li style="float:right"><a class="active" href="#here">Projectos</a></li>
+        <li style="float:right"><a class="active" href="#here">Proyectos</a></li>
         <li style="float:right"><a href="about.html">Sobre mí</a></li>
         <li style="float:right"><a href="index.html">Home</a></li>
     </ul>
